# Hero_Analysis

./: .pre-commit-config.yaml  LICENSE  README.md  cleaned_hero.csv  comic&movie.csv  hero_analysis.ipynb  marvelvsdc.csv  match.csv  mtest.csv  pyproject.toml  test.csv
src/hero_data/: Infer.py  __main__.py  cli.py  infer.py  model.py
src/hero_data/Data_Sum/: data_merge.py  data_sum.py
src/hero_data/EDA/: data_cleaning.py  multi_column.py  multi_coumun.py  per_colum.py  per_column.py
src/hero_data/Inference/: Infer.py
