[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Hero_analysis"
authors = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"}
]
maintainers = [
    {name = "Ruoyu Chen", email = "rchen2@mail.yu.edu"},
]
description = "Hero analysis: project 1 & 3 & 4 for Analytics Programming"
readme = "README.md"
keywords = ["data visualization", "Hero", "Analytics Programming"]
license = {text = "MIT License"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=1.20",
    "pandas>=1.4",
    "seaborn>=0.13.0"
]
version="3.0"
[project.scripts]
Hero_analysis = "hero_data.cli:main"

[project.urls]
Repository = "https://github.com/jc000222/Hero_Analysis.git"

[tool.setuptools.packages.find]
where = ["src"]
